overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: integration-project-2026-groep-2-prod
  labels:
    environment: prod
    managed-by: argocd
